--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@ https://templatemo.com/tm-588-ebook-landing
                                 If your wheel looks like anything above, well, we need to talk... <br><br><br>
                                 Imagine if your car's tires are like anything in the RED, will it move?<br><br><br>
                                 I don't want to call that a wheel, or a circle, because that looks like a trapezium<br><br><br>
-                                Whatever part of your life in the wheel of life is low, that is what is holding your wheel from being a complete circle, until then, you will fel stuck!<br><br><br>
-                                <span style="color: red;">NOW THAT IS WHERE YOU NEED IMPROVEMENT, THAT IS WHY YOU NEED IMPROVEMENTS AND THAT IS WHY YOU NEED TO GET THIS BOOK BUNDLE.</span>
+                                Whatever part of your life in the wheel of life is low, that is what is holding your wheel from being a complete circle, until then, you will feel stuck!<br><br><br>
+                                <span style="color: red;">NOW THAT IS WHERE YOU NEED IMPROVEMENT, THAT IS WHY YOU NEED IMPROVEMENT, AND THAT IS WHY YOU NEED TO GET THIS BOOK BUNDLE.</span>
                             </blockquote>
                         </div>
                     </div>
