created a new copy

--- a/index.html
+++ b/index.html
@@ -365,11 +365,15 @@ https://templatemo.com/tm-588-ebook-landing
                     <div class="row">
                         <div class="col-lg-12 col-12 text-center">
                             <blockquote class="blockquote">
-                                All your life, you haven't tried flying an helicopter, not because they are scarce or quite expensive, but because YOU DEFINITELY DON'T KNOW HOW TO FLY ONE. <br><br><br>
-                                While we were children, 13 years and below or even more, our parents, despite the intense love they had for us, never gave us their car for a cruise.<br>
-                                I'm sure you won't spend hours figuring out why, you guessed it right; YOU NEVER HAD THE ABILITY, SKILL OR NEVER WAS THE KIND OF PERSON THAT COULD DRIVE ONE.<br><br><br>
-                                Come'on, even if you tried, your legs will be 2 states away from the pedal.<br><br><br>
-                                When it comes to what you have, do and how much you can get in life, you are in the middle, the central force of it all.
+                                All your life, you’ve never flown a helicopter. Not because they’re rare or ridiculously expensive—but because <span style="color: red;">you simply don’t know how to fly one.</span> <br><br><br>
+                                Think back to your childhood. No matter how much your parents loved you, they never handed you the car keys and said, “Take it for a spin.”<br>
+                                Why? Because you <span style="color: red;">weren’t the kind of person who could drive one.</span><br><br><br>
+                                Even if you had begged, even if you had tried—your legs would have barely reached the pedals.<br><br><br>
+                                Here’s the truth:<br>
+                                Your life, your success, your income—<span style="color: red;">they all depend on WHO you are and what skills you have.</span><br><br><br>
+                                If you’re not where you want to be, it’s not because you lack potential. <span style="color: red;">It’s because you haven’t yet become the kind of person who can achieve it.</span><br><br><br>
+                                <span style="color: red;">So the question is… are you willing to stay grounded? Or are you ready to take control and finally level up?</span><br><br><br>
+                                The choice is yours—but time isn’t waiting. Act now.
                             </blockquote>
                         </div>
 
