made new changes

--- a/index.html
+++ b/index.html
@@ -365,15 +365,15 @@ https://templatemo.com/tm-588-ebook-landing
                     <div class="row">
                         <div class="col-lg-12 col-12 text-center">
                             <blockquote class="blockquote">
-                                All your life, you’ve never flown a helicopter. Not because they’re rare or ridiculously expensive—but because <span style="color: red;">you simply don’t know how to fly one.</span> <br><br><br>
-                                Think back to your childhood. No matter how much your parents loved you, they never handed you the car keys and said, “Take it for a spin.”<br>
-                                Why? Because you <span style="color: red;">weren’t the kind of person who could drive one.</span><br><br><br>
-                                Even if you had begged, even if you had tried—your legs would have barely reached the pedals.<br><br><br>
-                                Here’s the truth:<br>
-                                Your life, your success, your income—<span style="color: red;">they all depend on WHO you are and what skills you have.</span><br><br><br>
-                                If you’re not where you want to be, it’s not because you lack potential. <span style="color: red;">It’s because you haven’t yet become the kind of person who can achieve it.</span><br><br><br>
-                                <span style="color: red;">So the question is… are you willing to stay grounded? Or are you ready to take control and finally level up?</span><br><br><br>
-                                The choice is yours—but time isn’t waiting. Act now.
+                                <p style="color: black;">All your life, you’ve never flown a helicopter. Not because they’re rare or ridiculously expensive—but because <span style="color: red;">you simply don’t know how to fly one.</span></p><br>
+                                <p style="color: black;">Think back to your childhood. No matter how much your parents loved you, they never handed you the car keys and said, “Take it for a spin.”</p><br>
+                                <p style="color: black;">Why? Because you <span style="color: red;">weren’t the kind of person who could drive one.</span><br>
+                                Even if you had begged, even if you had tried—your legs would have barely reached the pedals.</p><br><br>
+                                <h3>Here’s the truth:</h3>
+                                <p style="color: black;">Your life, your success, your income—<span style="color: red;">they all depend on WHO you are and what skills you have.</span></p><br>
+                                <p style="color: black;">If you’re not where you want to be, it’s not because you lack potential. <span style="color: red;">It’s because you haven’t yet become the kind of person who can achieve it.</span></p><br>
+                                <p style="color: black;"><span style="color: red;">So the question is… are you willing to stay grounded? Or are you ready to take control and finally level up?</span></p><br>
+                                The choice is yours—but time isn’t waiting. Act now.</p>
                             </blockquote>
                         </div>
 
@@ -389,11 +389,21 @@ https://templatemo.com/tm-588-ebook-landing
                     <div class="row">
                         <div class="col-lg-12 col-12 text-center">
                             <blockquote class="blockquote">
-                                When you look at the image above, The Wheel Of Life, it shows you how much in the center you are. <br><br><br>
-                                You are the actor in your story, not your friend, not your father, spouse, or mother; it rises and falls with you.<br><br><br>
-                                The Wheel Of Life shows you a rank in each circle, from 1-10, now here is what it gets interesting.<br><br><br>
-                                <span style="color: red;">I want you to perfom this simple exercise; look at each of those areas/sections of the circle, use a dot on each level and rank yourself, honestly rank your self from 1-10, 1 being the lowest and 10 being the highest.<br><br><br>
-                                Now, I want you to join those dots across the sections, what do you see? Is it a perfect circle? Is it a perfect wheel? Is it a perfect life?</span>
+                                <h4>Are You Living Your Best Life? This Will Show You.</h4><br>
+                                <p style="color: black;">Look closely at The Wheel of Life in the image above. Do you see it? You are at the center.</p><br>
+                                <p style="color: black;">Not your parents.</p>
+                                <p style="color: black;">Not your spouse.</p>
+                                <p style="color: black;">Not your friends.</p><br>
+                                <h3>You.</h3><br>
+                                <p style="color: black;">Everything in your life—your success, your happiness, your relationships, your finances—rises and falls with you.<br><br>
+                                    Now, let’s put this to the test.</p><br><br>
+                                <ui align="left">
+                                    <h5 align="left"><u>Do this simple yet powerful exercise:</u></h5>
+                                    <p style="color: black;">1. Just like the image above, draw a circle and divide it into 8 sections.</span></p>
+                                    <p style="color: black;">2. Look at each section of the Wheel—Financial, Spiritual, Relationships, Intellectual, Emotional, Physical, Career, and Family.</p>
+                                    <p style="color: black;">3. Rank yourself from 1 to 10 in each area (1 being the lowest, 10 being the highest). Be brutally honest.</p>
+                                    <p style="color: black;">4. Now, connect the dots across all sections.</p><br><br>
+                                </ui>
                             </blockquote>
                         </div>
                     </div>
@@ -410,14 +420,67 @@ https://templatemo.com/tm-588-ebook-landing
 
                         <div class="col-lg-12 col-12 text-center">
                             <blockquote class="blockquote">
-                                If your wheel looks like anything above, well, we need to talk... <br><br><br>
-                                Imagine if your car's tires are like anything in the RED, will it move?<br><br><br>
-                                I don't want to call that a wheel, or a circle, because that looks like a trapezium<br><br><br>
-                                Whatever part of your life in the wheel of life is low, that is what is holding your wheel from being a complete circle, until then, you will feel stuck!<br><br><br>
-                                <span style="color: red;">NOW THAT IS WHERE YOU NEED IMPROVEMENT, THAT IS WHY YOU NEED IMPROVEMENT, AND THAT IS WHY YOU NEED TO GET THIS BOOK BUNDLE.</span>
+                                Look at that wheel. Be honest—does it look like a real circle? Or maybe a trapezium?<br><br>
+                                <p style="color: black;">Now, picture your car tires looking like that.</p>
+                                <p style="color: black;">Would your car move? Be very honest.</p><br>
+                                <p style="color: red">That’s exactly what’s happening to your life.</p><br>
+                                <p style="color: black">And until you fix it, you will keep feeling stuck.</p>
+                                <p style="color: black">You will keep wondering why nothing is working.</p>
+                                <p style="color: black">You will keep watching others move ahead while you stay in the same place.</p><br>
+                                <p style="color: red">But it doesn’t have to be this way.</p><br>
+                                <p style="color: black">This is your sign. Your wake-up call.</p>
+                                <p style="color: black">It’s time to take control. It’s time to fix the gaps in your life and build something real.</p><br>
+                                <p style="color: red">This Transformational Book Bundle will show you how.</p><br>
+                                <p style="color: black">But here’s the thing—not everyone will take action.</p>
+                                <p style="color: black">Some will see this, feel the truth in their gut, and still do nothing.</p><br>
+                                <p style="color: red">Don’t let that be you.</p><br>
+                                <p style="color: black">If you’re serious about living your best life, this is your chance.</p>
+                                <p style="color: black">Get the Transformational Book Bundle now—because waiting will only keep you exactly where you are.</p><br>
+                                <h3 style="color: red">The choice is yours.</h3><br>
                             </blockquote>
                         </div>
                     </div>
+
+                    <div class="row justify-content-center">
+                        <div class="col-lg-6 col-12 mt-5 mt-lg-0 d-flex justify-content-center">
+                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get The Bundle Now (NGN 4,000)</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr style="color: white;">
+            <hr style="color: white;">
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <br><br><br>
+                        <div class="col-lg-12 col-12 text-center mb-5">    
+                            <h3>Let's show you a little bit of what's inside the BOMB you will be getting...</h3>
+                        </div>
+                        <div class="col-lg-12 col-12">
+                            <img src="images/snip.png" class="img-fluid" alt="">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <hr style="color: white;"><br><br>
+                        <div class="col-lg-12 col-12 text-center mb-5">    
+                            <h3>Lol, that's not all, listen to this, come'on, it's just a minute...</h3>
+                        </div>
+
+                        <div class="col-lg-12 col-12">
+                            <img src="images/EXP.png" class="img-fluid" alt="">
+                        </div>
+                        <hr style="color: white;">
+                        <div class="col-lg-12 col-12 text-center">
+                            <audio controls>
+                                <source src="images/Exponential Growth.MP3" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                            </audio>
+                        </div>
+                    </div>
+                    <hr style="color: white;">
+                    <hr style="color: white;">
 
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0 d-flex justify-content-center">
@@ -432,10 +495,10 @@ https://templatemo.com/tm-588-ebook-landing
                     <div class="row">
                         <div class="col-lg-12 col-12 text-center">
                             <blockquote class="blockquote">
-                                Many of us want to have things but we fail to realize that it starts from BECOMING that kind of person that finds it easy to HAVE. <br><br><br>
-                                You can only BECOME with the RIGHT INFORMATION.<br><br><br>
-                                You can begin having what we call: YOUR BEST YEAR EVER.<br><br><br>
-                                <span style="color: red;">You have to BECOME before you can DO or HAVE.</span>
+                                <p style="color: black;">Many of us want to have things but we fail to realize that it starts from BECOMING that kind of person that finds it easy to HAVE.</p><br>
+                                <p style="color: black;">You can only BECOME with the RIGHT INFORMATION.</p><br>
+                                <p style="color: black;">You can begin having what we call: YOUR BEST YEAR EVER.</p><br>
+                                <h3 style="color: red">You have to BECOME before you can DO or HAVE.</h3>
                             </blockquote>
                         </div>
                     </div>
@@ -544,45 +607,6 @@ https://templatemo.com/tm-588-ebook-landing
                             </div>
                         </div>
 
-                    </div>
-                </div>
-            </section>
-
-            <section>
-                <div class="container">
-                    <div class="row">
-                        <br><br><br>
-                        <div class="col-lg-12 col-12 text-center mb-5">    
-                            <h2>Let's show you a little bit of what's inside the BOMB you will be getting...</h2>
-                        </div>
-                        <div class="col-lg-12 col-12">
-                            <img src="images/snip.png" class="img-fluid" alt="">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <hr style="color: white;"><br><br>
-                        <div class="col-lg-12 col-12 text-center mb-5">    
-                            <h2>Lol, that's not all, listen to this, come'on, it's just a minute...</h2>
-                        </div>
-
-                        <div class="col-lg-6 col-12">
-                            <img src="images/EXP.png" class="img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-6 col-12 text-center">
-                            <audio controls>
-                                <source src="images/Exponential Growth.MP3" type="audio/mpeg">
-                                Your browser does not support the audio element.
-                            </audio>
-                        </div>
-                    </div>
-                    
-
-                    <div class="row justify-content-center">
-                        <div class="col-lg-6 col-12 mt-5 mt-lg-0 d-flex justify-content-center">
-                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get The Bundle Now (NGN 4,000)</a>
-                        </div>
                     </div>
                 </div>
             </section>
