made changes to the buttons

--- a/index.html
+++ b/index.html
@@ -62,13 +62,6 @@ https://templatemo.com/tm-588-ebook-landing
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_5">Contact</a>
                             </li>
-
-                            <li class="nav-item">
-                                <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn custom-border-btn btn-naira btn-inverted">
-                                    <i class="btn-icon bi-cloud-download"></i>
-                                    <span>Get it now</span><!-- duplicated above one for mobile -->
-                                </a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -88,9 +81,7 @@ https://templatemo.com/tm-588-ebook-landing
                             <h6>Your Finances, Relationships, I Mean Everything!</h6>
                             <br>
                             
-                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll me-3">Get it now</a>
-
-                            <a href="#section_2" class="link link--kale smoothscroll">Discover More</a>
+                            <a href="#section_2" class="btn custom-btn smoothscroll me-3">Discover more</a>
                         </div>
 
                         <div class="hero-image-wrap col-lg-6 col-12 mt-3 mt-lg-0">
@@ -102,7 +93,7 @@ https://templatemo.com/tm-588-ebook-landing
             </section>
 
 
-            <section class="featured-section">
+            <section style="background-color: #E9C46A;" class="featured-section">
                 <div class="container">
                     <div class="row">
 
@@ -151,13 +142,14 @@ https://templatemo.com/tm-588-ebook-landing
 
                                 <h4 align="center" class="mb-4">According to statistics...</h4>
 
-                                <p align="center">Getting private access to renowed speakers like; <span style="color: black;"><strong>John C. Maxwell, Sam Adeyemi, Alex Homorzi, Dr. David Ogbueli, Dr. David Ogunshola, Fela Durutoye and the likes,</strong></span> will cost you an avaerage of <strong><span style="color: black;">$1,027</strong></span>, just to get in the same room with them.</p>
+                                <p align="center">Getting private access to renowed speakers like; <span style="color: black;"><strong>John C. Maxwell, Sam Adeyemi, Alex Homorzi, Dr. David Ogbueli, Dr. David Ogunshola, Fela Durutoye and the likes,</strong></span> will cost you an avaerage of <strong><span style="color: black;">$1,027</strong></span>, just to get in the same room with them.</p><br>
+                                <p align="center">Personally, that sounds like a lot to me.</p>
                                 
                             </div>
                         </div>
 
                         <div class="col-lg-12 col-12 text-center">
-                            <blockquote class="blockquote">What if you could steal 10 years worth of their knowledge for just 1% of that amount?</blockquote>
+                            <blockquote class="blockquote">What if you could steal 10 years worth of their knowledge for just 0.5% of that amount?</blockquote>
                         </div>
 
                     </div>
@@ -172,6 +164,10 @@ https://templatemo.com/tm-588-ebook-landing
 
                         <div class="col-lg-12 col-12 text-center">
                             <h6>What's inside?</h6>
+                            <small style="color: black;">With over 500+ Classic Ebooks, 100+ Audio Books, 200+ Hidden Podcasts and Upcoming events you don't want to miss.<br>
+                            We have AI Agents that summarizes these books for you, if you are the kind that finds it difficult to read.<br><br>
+                            We have made this journey easy for you...</small>
+                            <br><br>
 
                             <h2 class="mb-5">Check it out yourself</h2>
                         </div>
@@ -443,7 +439,7 @@ https://templatemo.com/tm-588-ebook-landing
 
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0 d-flex justify-content-center">
-                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get The Bundle Now (NGN 4,000)</a>
+                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get The Kit Now <small style="font-size: small;"><br><del>NGN 9,700</del></small>NGN 5,000</a>
                         </div>
                     </div>
                 </div>
