made new changes

--- a/index.html
+++ b/index.html
@@ -99,13 +99,11 @@ https://templatemo.com/tm-588-ebook-landing
 
                         <div class="col-lg-8 col-12">
                             <div class="avatar-group d-flex flex-wrap align-items-center">
-                                <img src="images/avatar/portrait-beautiful-young-woman-standing-grey-wall.jpg" class="img-fluid avatar-image" alt="">
+                                <img src="images/avatar/law.png" class="img-fluid avatar-image" alt="">
 
-                                <img src="images/avatar/portrait-young-redhead-bearded-male.jpg" class="img-fluid avatar-image avatar-image-left" alt="">
+                                <img src="images/avatar/gift.png" class="img-fluid avatar-image avatar-image-left" alt="">
 
-                                <img src="images/avatar/pretty-blonde-woman.jpg" class="img-fluid avatar-image avatar-image-left" alt="">
-
-                                <img src="images/avatar/studio-portrait-emotional-happy-funny-smiling-boyfriend.jpg" class="img-fluid avatar-image avatar-image-left" alt="">
+                                <img src="images/avatar/ben.jpeg" class="img-fluid avatar-image avatar-image-left" alt="">
 
                                 <div class="reviews-group mt-3 mt-lg-0">
                                     <strong>4.7</strong>
@@ -151,11 +149,11 @@ https://templatemo.com/tm-588-ebook-landing
                         <div class="col-lg-12 col-12 text-center">
                             <blockquote class="blockquote">What if you could steal 10 years worth of their knowledge for just 0.5% of that amount?</blockquote>
                         </div>
-
                     </div>
+                    <hr>
                 </div>
             </section>
-
+           
             <section>
                 <div class="container">
                     <div class="row">
@@ -215,6 +213,7 @@ https://templatemo.com/tm-588-ebook-landing
                         </div>
 
                         <div class="col-lg-12 col-12 text-center">
+                            <hr>
                             <blockquote class="blockquote">
                                 Now Look at your own wheel. Be honest—does it look like a real circle? Or maybe a trapezium?<br><br>
                             </blockquote>
@@ -517,7 +516,7 @@ https://templatemo.com/tm-588-ebook-landing
                         <div class="col-lg-4 col-12">
                             <div class="custom-block d-flex flex-wrap">
                                 <div class="custom-block-image-wrap d-flex flex-column">
-                                    <img src="images/avatar/portrait-beautiful-young-woman-standing-grey-wall.jpg" class="img-fluid avatar-image" alt="">
+                                    <img src="images/avatar/gift.png" class="img-fluid avatar-image" alt="">
 
                                     <div class="text-center mt-3">
                                         <span class="text-white">Gift</span>
@@ -537,7 +536,7 @@ https://templatemo.com/tm-588-ebook-landing
                                         <i class="bi-star"></i>
                                     </div>
 
-                                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="mb-0">OMG! This is enough to feed me for two years. Value worth more than the price. Wow, just wow!</p>
                                 </div>
                             </div>
                         </div>
@@ -545,7 +544,7 @@ https://templatemo.com/tm-588-ebook-landing
                         <div class="col-lg-4 col-12 my-5 my-lg-0">
                             <div class="custom-block d-flex flex-wrap">
                                 <div class="custom-block-image-wrap d-flex flex-column">
-                                    <img src="images/avatar/portrait-young-redhead-bearded-male.jpg" class="img-fluid avatar-image avatar-image-left" alt="">
+                                    <img src="images/avatar/ben.jpeg" class="img-fluid avatar-image avatar-image-left" alt="">
 
                                     <div class="text-center mt-3">
                                         <span class="text-white">Dr. Benson</span>
@@ -565,7 +564,7 @@ https://templatemo.com/tm-588-ebook-landing
                                         <i class="bi-star"></i>
                                     </div>
 
-                                    <p class="mb-0">If you need some specific CSS templates, you can Google with keywords such as templatemo one-page, templatemo portfolio, etc.</p>
+                                    <p class="mb-0">This is alot, this will definitely help anyone struggling with progress.</p>
                                 </div>
                             </div>
                         </div>
@@ -573,7 +572,7 @@ https://templatemo.com/tm-588-ebook-landing
                         <div class="col-lg-4 col-12">
                             <div class="custom-block d-flex flex-wrap">
                                 <div class="custom-block-image-wrap d-flex flex-column">
-                                    <img src="images/avatar/pretty-blonde-woman.jpg" class="img-fluid avatar-image" alt="">
+                                    <img src="images/avatar/law.png" class="img-fluid avatar-image" alt="">
 
                                     <div class="text-center mt-3">
                                         <span class="text-white">Lawrence</span>
@@ -593,7 +592,7 @@ https://templatemo.com/tm-588-ebook-landing
                                         <i class="bi-star-fill"></i>
                                     </div>
 
-                                    <p class="mb-0">Please tell your friends about our website that we provide 100% free CSS templates for everyone. Thank you for using our templates.</p>
+                                    <p class="mb-0">As a public speaker, getting people like John C. maxwell and Sam Adeyemi in my ear constanly is just a big win</p>
                                 </div>
                             </div>
                         </div>
