--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-588-ebook-landing
                             </li>
     
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_2">What's inside?</a>
+                                <a class="nav-link click-scroll" href="#inside">What's inside?</a>
                             </li>
 
                             <li class="nav-item">
@@ -238,7 +238,7 @@ https://templatemo.com/tm-588-ebook-landing
 
                     <div class="row justify-content-center">
                         <div class="col-lg-12 col-12 mt-5 mt-lg-0 d-flex justify-content-center">
-                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get The Kit Now</a>
+                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get Your Kit Now</a>
                         </div>
                     </div>
                     <hr style="color: white;">
@@ -270,8 +270,8 @@ https://templatemo.com/tm-588-ebook-landing
                                     <h5 style="color: white;">Let's show you a little bit of what's inside the BOMB you will be getting...</h5>
                                     <img src="images/snip.png" class="img-fluid" alt="">
                                 </div>
-                                <hr style="color: white;">
-                                <hr style="color: white;">
+                                <hr><hr><hr>
+
                                 <!-- Right Section (Audio Players) -->
                                 <div class="col-lg-12 col-12 text-center">
                                     <h5 style="color: white;">Lol, that's not all, listen to this, come on, it's just less tha 5 minutes...</h5>
@@ -298,15 +298,21 @@ https://templatemo.com/tm-588-ebook-landing
                             </div>
                         </div>
 
-                        <hr>
-                        <hr>
+                        <hr><hr>
 
                         <div class="col-lg-12 col-12 text-center">
                             <small style="color: white">With over 500+ Classic Ebooks, 100+ Audio Books, 200+ Hidden Podcasts and Upcoming events you don't want to miss.<br>
                                 <strong>We have AI Agents that summarizes these books for you,</strong> if you are the kind that finds it difficult to read.<br><br>
                                 We have made this journey easy for you...</small>
-                                <br><br><br>
+                                <br><br>
                         </div>
+
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6 col-12 mt-5 mt-lg-0 d-flex justify-content-center">
+                                <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get Your Kit Now</a>
+                            </div>
+                        </div>
+                        <hr><hr><hr>
 
                         <div class="col-lg-4 col-12">
                             <nav id="navbar-example3" class="h-100 flex-column align-items-stretch">
@@ -495,7 +501,7 @@ https://templatemo.com/tm-588-ebook-landing
 
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0 d-flex justify-content-center">
-                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get The Kit Now</a>
+                            <a href="https://paystack.com/pay/be-do-have" class="btn custom-btn smoothscroll btn-lg">Get Your Kit Now</a>
                         </div>
                     </div>
                 </div>
